--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="29" />
 
     <application
+
+
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -29,6 +31,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <uses-native-library
+            android:name="libOpenCL.so"
+            android:required="false" />
+        <uses-library
+            android:name="libcdsprpc.so"
+            android:required="false"/>
+        <meta-data android:name="android.hardware.accelerated" android:value="true" />
     </application>
 
 </manifest>
